apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.21.1.9799-ls269
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: media
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
      - name: media
        hostPath:
          path: /mnt/data
          type: Directory
      - name: config
        hostPath:
          path: /mnt/data/configs/radarr
          type: Directory
